parser/src/pre/snapshots/parser__pre__lexer__tests__hello_world.snap
---
source: parser/src/pre/lexer.rs
expression: tokens
---
[
    (
        Identifier(
            "int",
        ),
        1..4,
    ),
    (
        Identifier(
            "main",
        ),
        5..9,
    ),
    (
        Punctuator(
            ParenOpen,
        ),
        9..10,
    ),
    (
        Punctuator(
            ParenClose,
        ),
        10..11,
    ),
    (
        Punctuator(
            BraceOpen,
        ),
        12..13,
    ),
    (
        Identifier(
            "puts",
        ),
        18..22,
    ),
    (
        Punctuator(
            ParenOpen,
        ),
        22..23,
    ),
    (
        StringLiteral(
            "Hello, World!",
        ),
        23..37,
    ),
    (
        Punctuator(
            ParenClose,
        ),
        38..39,
    ),
    (
        Punctuator(
            Semicolon,
        ),
        39..40,
    ),
    (
        Punctuator(
            BraceClose,
        ),
        41..42,
    ),
]
