parser/src/pre/snapshots/parser__pre__lexer__tests__identifiers.snap
---
source: parser/src/pre/lexer.rs
expression: tokens
---
[
    (
        Identifier(
            "AAAA",
        ),
        0..4,
    ),
    (
        Identifier(
            "BBBB",
        ),
        5..9,
    ),
    (
        Identifier(
            "CCCC",
        ),
        10..14,
    ),
]
