parser/src/pre/snapshots/parser__pre__lexer__tests__left_left_chevron_eq.snap
---
source: parser/src/pre/lexer.rs
expression: tokens
---
[
    (
        Punctuator(
            Dot,
        ),
        0..1,
    ),
    (
        Punctuator(
            LeftLeftChevronEq,
        ),
        2..5,
    ),
    (
        Punctuator(
            Dot,
        ),
        6..7,
    ),
]
