parser/src/pre/snapshots/parser__pre__lexer__tests__lex_test.snap
---
source: parser/src/pre/lexer.rs
expression: tokens
---
[
    (
        Identifier(
            [
                105,
                110,
                116,
            ],
        ),
        1..4,
    ),
    (
        Identifier(
            [
                109,
                97,
                105,
                110,
            ],
        ),
        5..9,
    ),
    (
        Punctuator(
            ParenOpen,
        ),
        9..10,
    ),
    (
        Punctuator(
            ParenClose,
        ),
        10..11,
    ),
    (
        Punctuator(
            BraceOpen,
        ),
        12..13,
    ),
    (
        Identifier(
            [
                112,
                117,
                116,
                115,
            ],
        ),
        18..22,
    ),
    (
        Punctuator(
            ParenOpen,
        ),
        22..23,
    ),
    (
        StringLiteral(
            [
                72,
                101,
                108,
                108,
                111,
                44,
                32,
                87,
                111,
                114,
                108,
                100,
                33,
            ],
        ),
        23..37,
    ),
    (
        Punctuator(
            ParenClose,
        ),
        38..39,
    ),
    (
        Punctuator(
            Semicolon,
        ),
        39..40,
    ),
    (
        Punctuator(
            BraceClose,
        ),
        41..42,
    ),
]
