parser/src/pre/snapshots/parser__pre__lexer__tests__pretty_arrow.snap
---
source: parser/src/pre/lexer.rs
expression: tokens
---
[
    (
        Identifier(
            "struct_ptr",
        ),
        1..11,
    ),
    (
        Punctuator(
            Arrow,
        ),
        11..14,
    ),
    (
        Identifier(
            "field",
        ),
        14..19,
    ),
    (
        Punctuator(
            Semicolon,
        ),
        19..20,
    ),
]
