parser/src/pre/snapshots/parser__pre__lexer__tests__some_operators.snap
---
source: parser/src/pre/lexer.rs
expression: tokens
---
[
    (
        Identifier(
            "int",
        ),
        1..4,
    ),
    (
        Identifier(
            "x",
        ),
        5..6,
    ),
    (
        Punctuator(
            Eq,
        ),
        7..8,
    ),
    (
        PpNumber(
            "1",
        ),
        9..10,
    ),
    (
        Punctuator(
            Plus,
        ),
        11..12,
    ),
    (
        PpNumber(
            "1",
        ),
        13..14,
    ),
    (
        Punctuator(
            Semicolon,
        ),
        14..15,
    ),
    (
        Identifier(
            "int",
        ),
        25..28,
    ),
    (
        Identifier(
            "hello",
        ),
        29..34,
    ),
    (
        Punctuator(
            ParenOpen,
        ),
        34..35,
    ),
    (
        Identifier(
            "const",
        ),
        35..40,
    ),
    (
        Identifier(
            "char",
        ),
        41..45,
    ),
    (
        Punctuator(
            Asterisk,
        ),
        45..46,
    ),
    (
        Identifier(
            "uwu",
        ),
        47..50,
    ),
    (
        Punctuator(
            ParenClose,
        ),
        50..51,
    ),
    (
        Punctuator(
            BraceOpen,
        ),
        52..54,
    ),
    (
        Identifier(
            "uwu",
        ),
        59..62,
    ),
    (
        Punctuator(
            BracketOpen,
        ),
        62..63,
    ),
    (
        PpNumber(
            "5",
        ),
        63..64,
    ),
    (
        Punctuator(
            BracketClose,
        ),
        64..65,
    ),
    (
        Punctuator(
            LeftLeftChevronEq,
        ),
        66..69,
    ),
    (
        PpNumber(
            "23",
        ),
        70..72,
    ),
    (
        Punctuator(
            Semicolon,
        ),
        72..73,
    ),
    (
        Punctuator(
            Asterisk,
        ),
        78..79,
    ),
    (
        Identifier(
            "uwu",
        ),
        79..82,
    ),
    (
        Punctuator(
            Asterisk,
        ),
        83..84,
    ),
    (
        Punctuator(
            ParenOpen,
        ),
        85..86,
    ),
    (
        Identifier(
            "p",
        ),
        86..87,
    ),
    (
        Punctuator(
            PlusPlus,
        ),
        87..89,
    ),
    (
        Punctuator(
            ParenClose,
        ),
        89..90,
    ),
    (
        Punctuator(
            Semicolon,
        ),
        90..91,
    ),
    (
        Identifier(
            "return",
        ),
        96..102,
    ),
    (
        Identifier(
            "p",
        ),
        103..104,
    ),
    (
        Punctuator(
            Semicolon,
        ),
        104..105,
    ),
    (
        Punctuator(
            BraceClose,
        ),
        106..108,
    ),
]
